mabger-meter/force-app/main/default/objects/Opportunity/fields/Actual_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Decision_Date__c</fullName>
    <label>Actual Decision Date</label>
    <type>Date</type>
</CustomField>