mabger-meter/force-app/main/default/objects/Opportunity/fields/Actual_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Date__c</fullName>
    <label>Actual Revenue Date</label>
    <type>Date</type>
</CustomField>