mabger-meter/force-app/main/default/objects/Opportunity/fields/Alternate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Notes__c</fullName>
    <inlineHelpText>Describe any alternate options being provided</inlineHelpText>
    <label>Alternate Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>