mabger-meter/force-app/main/default/objects/Opportunity/fields/Application_Description__c.field-meta.xml
<CustomField>
    <fullName>Application_Description__c</fullName>
    <label>Application Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>