mabger-meter/force-app/main/default/objects/Opportunity/fields/Applications_of__c.field-meta.xml
<CustomField>
    <fullName>Applications_of__c</fullName>
    <label>Applications of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fluid Management</fullName>
            </value>
            <value>
                <fullName>Residential Meters</fullName>
            </value>
            <value>
                <fullName>C&amp;I Meters</fullName>
            </value>
            <value>
                <fullName>Encoders</fullName>
            </value>
            <value>
                <fullName>Mobile Reading System</fullName>
            </value>
            <value>
                <fullName>Fixed Network Reading Systems</fullName>
            </value>
            <value>
                <fullName>Analytics/Meter Data Management Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>