mabger-meter/force-app/main/default/objects/Opportunity/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Current Assignee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accurate Meter - Caleb Burson</fullName>
            </value>
            <value>
                <fullName>Accurate Meter - Dayne Burson</fullName>
            </value>
            <value>
                <fullName>ACI Controls - Steven Smith</fullName>
            </value>
            <value>
                <fullName>Aeromechanical LLC - Brian Carstens</fullName>
            </value>
            <value>
                <fullName>Aguas de Israel - Gustavo Feria</fullName>
            </value>
            <value>
                <fullName>Airtelligence - Dan McNeil</fullName>
            </value>
            <value>
                <fullName>Airtelligence - Ron Borino</fullName>
            </value>
            <value>
                <fullName>Airtelligence - Steve Grosvenor</fullName>
            </value>
            <value>
                <fullName>Aluma Systems - Claudia Abrego</fullName>
            </value>
            <value>
                <fullName>Anchorage Well and Pump - Henry Martin</fullName>
            </value>
            <value>
                <fullName>Andrews Industrial Ctls - Grand Kandabarrow</fullName>
            </value>
            <value>
                <fullName>Andrews Industrial Ctls - Nick Andrews</fullName>
            </value>
            <value>
                <fullName>Applied Engineering - Ed Houchens</fullName>
            </value>
            <value>
                <fullName>Applied Engineering - Joe Nelson</fullName>
            </value>
            <value>
                <fullName>Aser Control - Joel Guerrero</fullName>
            </value>
            <value>
                <fullName>Aser Control - Jose Covarrubias</fullName>
            </value>
            <value>
                <fullName>Aser Control - Natali Lince</fullName>
            </value>
            <value>
                <fullName>Aser Control - Oscar Villarreal</fullName>
            </value>
            <value>
                <fullName>Aser Control - Silvestre Gomez</fullName>
            </value>
            <value>
                <fullName>Associated Air Products - Primary-Jeff Wixson</fullName>
            </value>
            <value>
                <fullName>Atlas - David Johnson</fullName>
            </value>
            <value>
                <fullName>Atlas - DJ Johnson</fullName>
            </value>
            <value>
                <fullName>Atlas - Ed Larson</fullName>
            </value>
            <value>
                <fullName>Atlas - Haden Johnson</fullName>
            </value>
            <value>
                <fullName>Atlas - Jeff Watson</fullName>
            </value>
            <value>
                <fullName>Atlas - Mike Mckinnie</fullName>
            </value>
            <value>
                <fullName>Atlas - Tami Gaden</fullName>
            </value>
            <value>
                <fullName>Automatic Controls - Jeff Merman</fullName>
            </value>
            <value>
                <fullName>Automatic Controls - Teri Ries</fullName>
            </value>
            <value>
                <fullName>Automation X - Dan Steele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>