mabger-meter/force-app/main/default/objects/Opportunity/fields/Badger_Meter_Products__c.field-meta.xml
<CustomField>
    <fullName>Badger_Meter_Products__c</fullName>
    <label>Badger Meter Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>