mabger-meter/force-app/main/default/objects/Opportunity/fields/Badger_Services_Software_PMO__c.field-meta.xml
<CustomField>
    <fullName>Badger_Services_Software_PMO__c</fullName>
    <label>Badger Services (Software + PMO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>