mabger-meter/force-app/main/default/objects/Opportunity/fields/Bid_Bond__c.field-meta.xml
<CustomField>
    <fullName>Bid_Bond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bid Checklist</description>
    <label>Bid Bond</label>
    <type>Checkbox</type>
</CustomField>