mabger-meter/force-app/main/default/objects/Opportunity/fields/Bid_Bond_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bid_Bond_Percent__c</fullName>
    <description>Bid Checklist</description>
    <label>Bid Bond Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>