mabger-meter/force-app/main/default/objects/Opportunity/fields/Bid_Number__c.field-meta.xml
<CustomField>
    <fullName>Bid_Number__c</fullName>
    <label>Bid Number (historical)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>