mabger-meter/force-app/main/default/objects/Opportunity/fields/Bid_Sales_Process_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sales_Process_Opportunity_ID__c</fullName>
    <label>Bid Sales Process Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>