mabger-meter/force-app/main/default/objects/Opportunity/fields/Bid_Tab_Received__c.field-meta.xml
<CustomField>
    <fullName>Bid_Tab_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bid Checklist</description>
    <label>Bid Tab Received</label>
    <type>Checkbox</type>
</CustomField>