mabger-meter/force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>