mabger-meter/force-app/main/default/objects/Opportunity/fields/CEC_Visit__c.field-meta.xml
<CustomField>
    <fullName>CEC_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if Opportunity is associated with a Customer Experience Center (CEC) visit.</inlineHelpText>
    <label>CEC Visit</label>
    <type>Checkbox</type>
</CustomField>