mabger-meter/force-app/main/default/objects/Opportunity/fields/CEC_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>CEC_Visit_Date__c</fullName>
    <description>This is the date that the CEC visit is scheduled.  If more than one day, please use the first date of the visit.</description>
    <inlineHelpText>This is the date that the CEC visit is scheduled.  If more than one day, please use the first date of the visit.</inlineHelpText>
    <label>CEC Visit Date</label>
    <type>Date</type>
</CustomField>