mabger-meter/force-app/main/default/objects/Opportunity/fields/CEC_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>CEC_Visit_Time__c</fullName>
    <label>CEC Visit Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>