mabger-meter/force-app/main/default/objects/Opportunity/fields/Consent_to_Created_Days__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Created_Days__c</fullName>
    <description>Difference between Opp created date and the Pardot Last Consent date for reporting purposes</description>
    <formula>DATEVALUE( CreatedDate) -  Pardot_Consent_Last_Updated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent to Created Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>