mabger-meter/force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field populated by process builder that creates an opportunity when a Pardot Lead MQLs and it is a contact record. The current LM Contact ID field is a text field and a lookup field is needed to auto populate the contact when creating a case from the opportunity.</description>
    <inlineHelpText>Person who submitted the lead</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>