mabger-meter/force-app/main/default/objects/Opportunity/fields/Contact_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date_Time__c</fullName>
    <description>LEAD METHOD</description>
    <label>Contact Date/Time</label>
    <type>DateTime</type>
</CustomField>