mabger-meter/force-app/main/default/objects/Opportunity/fields/Contact_Speed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Speed__c</fullName>
    <label>Contact Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>