mabger-meter/force-app/main/default/objects/Opportunity/fields/Created_to_Send_to_LM_Days__c.field-meta.xml
<CustomField>
    <fullName>Created_to_Send_to_LM_Days__c</fullName>
    <formula>Send_to_LM_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created to Send to LM Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>