mabger-meter/force-app/main/default/objects/Opportunity/fields/Customer_Bid_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Bid_Reference__c</fullName>
    <description>BID Checklist</description>
    <label>Customer Bid Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>