mabger-meter/force-app/main/default/objects/Opportunity/fields/Customer_Service_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email_Address__c</fullName>
    <label>Customer Service Email Address</label>
    <type>Email</type>
</CustomField>