mabger-meter/force-app/main/default/objects/Opportunity/fields/Data_Loader_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_ID__c</fullName>
    <label>Data Loader ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>