mabger-meter/force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Action__c</fullName>
    <description>Days since the record was last modified</description>
    <formula>FLOOR( IF(NOT(ISNULL(LastModifiedDate)), NOW()  - LastModifiedDate,NOW()- CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Action</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>