mabger-meter/force-app/main/default/objects/Opportunity/fields/ddc_prospector__Sourced_from_Data_com_del__c.field-meta.xml
<CustomField>
    <fullName>ddc_prospector__Sourced_from_Data_com_del__c</fullName>
    <formula>IF( OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;), Account.ddc_prospector__Sourced_from_Data_com__c = 1), &quot;Added from Data.com&quot;,&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sourced from Data.com</label>
    <type>Text</type>
</CustomField>