mabger-meter/force-app/main/default/objects/Opportunity/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <label>Delivery Schedule</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>