mabger-meter/force-app/main/default/objects/Opportunity/fields/DM_O_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_O_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>DM O External ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>