mabger-meter/force-app/main/default/objects/Opportunity/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>End_Customer_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>