mabger-meter/force-app/main/default/objects/Opportunity/fields/End_User_Information__c.field-meta.xml
<CustomField>
    <fullName>End_User_Information__c</fullName>
    <inlineHelpText>Any details on the End User Company that may not be captured elsewhere (e.g., related Account record)</inlineHelpText>
    <label>End User Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>