mabger-meter/force-app/main/default/objects/Opportunity/fields/Engineering_Or_Consulting_Firm__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Or_Consulting_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Engineering Or Consulting firm associated with an Opportunity.</description>
    <label>Engineering Or Consulting Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Engineering Or Consulting Firm)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>