mabger-meter/force-app/main/default/objects/Opportunity/fields/Estimated_Bid_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bid_Release_Date__c</fullName>
    <description>This is the date the bid is expected to be released</description>
    <inlineHelpText>This is the date the bid is expected to be released</inlineHelpText>
    <label>Estimated Bid Release Date</label>
    <type>Date</type>
</CustomField>