mabger-meter/force-app/main/default/objects/Opportunity/fields/Expected_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Date__c</fullName>
    <label>Expected Revenue Date</label>
    <type>Date</type>
</CustomField>