mabger-meter/force-app/main/default/objects/Opportunity/fields/Expected_Sales_Approach__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales_Approach__c</fullName>
    <label>Expected Sales Approach</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Cross-Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>