mabger-meter/force-app/main/default/objects/Opportunity/fields/Lead_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Create_Date__c</fullName>
    <label>Lead Create Date</label>
    <type>DateTime</type>
</CustomField>