mabger-meter/force-app/main/default/objects/Opportunity/fields/Lead_Industry__c.field-meta.xml
<CustomField>
    <fullName>Lead_Industry__c</fullName>
    <description>Field is populated via PB and lead mapping from the Industry. field filled in by the customer on web forms</description>
    <inlineHelpText>Industry entered by the customer on the web form</inlineHelpText>
    <label>Industry.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive Fluid Dispensing</fullName>
            </value>
            <value>
                <fullName>Aviation &amp; Aerospace</fullName>
            </value>
            <value>
                <fullName>Building Automation/HVAC</fullName>
            </value>
            <value>
                <fullName>Chemical, Refining &amp; Petrochemical</fullName>
            </value>
            <value>
                <fullName>Concrete Finishing</fullName>
            </value>
            <value>
                <fullName>Concrete Production</fullName>
            </value>
            <value>
                <fullName>Facility or Property Management</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Process or Industrial</fullName>
            </value>
            <value>
                <fullName>Test Equipment &amp; Services</fullName>
            </value>
            <value>
                <fullName>Water &amp; Wastewater Treatment</fullName>
            </value>
            <value>
                <fullName>Water Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>