mabger-meter/force-app/main/default/objects/Opportunity/fields/LeadMethod_Notes__c.field-meta.xml
<CustomField>
    <fullName>LeadMethod_Notes__c</fullName>
    <label>LeadMethod Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>