mabger-meter/force-app/main/default/objects/Opportunity/fields/Liquidated_Damages__c.field-meta.xml
<CustomField>
    <fullName>Liquidated_Damages__c</fullName>
    <label>Liquidated Damages</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>