mabger-meter/force-app/main/default/objects/Opportunity/fields/LM_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>LM_Contact_ID__c</fullName>
    <description>Used when a Contact goes MQL and creates an Opportunity.  Needed to pass Contact ID to Contact Roles object for Lead Method field mappings.</description>
    <label>LM Contact ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>