mabger-meter/force-app/main/default/objects/Opportunity/fields/LM_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>LM_Lead_ID__c</fullName>
    <description>Sync from LeadMethod. LM record ID</description>
    <inlineHelpText>Sync from LeadMethod. LM record ID</inlineHelpText>
    <label>LM Lead ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>