mabger-meter/force-app/main/default/objects/Opportunity/fields/Market_Insights__c.field-meta.xml
<CustomField>
    <fullName>Market_Insights__c</fullName>
    <label>Market Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>