mabger-meter/force-app/main/default/objects/Opportunity/fields/Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type__c</fullName>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>