mabger-meter/force-app/main/default/objects/Opportunity/fields/Negotiation_Review_Days__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Review_Days__c</fullName>
    <label>Negotiation/Review Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>