mabger-meter/force-app/main/default/objects/Opportunity/fields/Number_of_Electric_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Electric_Services__c</fullName>
    <label>Number of Electric Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>