mabger-meter/force-app/main/default/objects/Opportunity/fields/Number_of_Services_Included__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Services_Included__c</fullName>
    <inlineHelpText>Please indicate the number of services that are a part of this opportunity.</inlineHelpText>
    <label>Number of Services Included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>