mabger-meter/force-app/main/default/objects/Opportunity/fields/of_Copies__c.field-meta.xml
<CustomField>
    <fullName>of_Copies__c</fullName>
    <description>Bid Checklist</description>
    <label># of Copies</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>