mabger-meter/force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <displayFormat>{YY}-{MM}{00000}</displayFormat>
    <inlineHelpText>Year - Month + Opportunity Number (YY-MM#)</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>