mabger-meter/force-app/main/default/objects/Opportunity/fields/Opportunity_To_Case_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_To_Case_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>