mabger-meter/force-app/main/default/objects/Opportunity/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <formula>&quot;https://na3.salesforce.com/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity URL</label>
    <type>Text</type>
</CustomField>