mabger-meter/force-app/main/default/objects/Opportunity/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ED-Encompass Program Distributor</fullName>
            </value>
            <value>
                <fullName>FE-Flow End Customer</fullName>
            </value>
            <value>
                <fullName>FM-Skid Manufacturer/OEM</fullName>
            </value>
            <value>
                <fullName>HA-Flow House Account</fullName>
            </value>
            <value>
                <fullName>IR-Flow Industrial/Commercial Rep</fullName>
            </value>
            <value>
                <fullName>OD-Flow Open Distribution</fullName>
            </value>
            <value>
                <fullName>TD-Turf Distributor</fullName>
            </value>
            <value>
                <fullName>WD-WYCO Distributor</fullName>
            </value>
            <value>
                <fullName>WE-WYCO End Customer/Contractor</fullName>
            </value>
            <value>
                <fullName>WM-WYCO OEM</fullName>
            </value>
            <value>
                <fullName>DC-Distributor Customer</fullName>
            </value>
            <value>
                <fullName>UC-Utility Customer</fullName>
            </value>
            <value>
                <fullName>UD-Utility Distributor</fullName>
            </value>
            <value>
                <fullName>UO-Utility Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>