mabger-meter/force-app/main/default/objects/Opportunity/fields/Original_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Number__c</fullName>
    <label>Original Invoice Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>