mabger-meter/force-app/main/default/objects/Opportunity/fields/Original_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Number__c</fullName>
    <label>Original Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>