mabger-meter/force-app/main/default/objects/Opportunity/fields/Outbound_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Message_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box gets checked by workflow that also sends the outbound message</description>
    <inlineHelpText>Box gets checked by workflow that also sends the outbound message</inlineHelpText>
    <label>Outbound Message Sent</label>
    <type>Checkbox</type>
</CustomField>