mabger-meter/force-app/main/default/objects/Opportunity/fields/Pardot_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Campaign__c</fullName>
    <inlineHelpText>Campaign comes from Pardot</inlineHelpText>
    <label>Pardot Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>