mabger-meter/force-app/main/default/objects/Opportunity/fields/Pardot_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comment__c</fullName>
    <inlineHelpText>Field is populated by Pardot. Comment comes from the web form.</inlineHelpText>
    <label>Pardot Comment</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>