mabger-meter/force-app/main/default/objects/Opportunity/fields/Pardot_Consent_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Consent_Last_Updated__c</fullName>
    <description>Comes over from Lead when converted</description>
    <inlineHelpText>Date from Pardot Form</inlineHelpText>
    <label>Pardot Consent Last Updated</label>
    <type>Date</type>
</CustomField>