mabger-meter/force-app/main/default/objects/Opportunity/fields/Pardot_Interesting_Moment__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Interesting_Moment__c</fullName>
    <label>Pardot Interesting Moment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>