mabger-meter/force-app/main/default/objects/Opportunity/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>