mabger-meter/force-app/main/default/objects/Opportunity/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <defaultValue>&quot;NET 30 DAYS&quot;</defaultValue>
    <inlineHelpText>Standard payment terms are NET 30 Days.  Custom payment terms require approval from Finance.</inlineHelpText>
    <label>Payment Terms</label>
    <length>12</length>
    <type>Text</type>
</CustomField>