mabger-meter/force-app/main/default/objects/Opportunity/fields/Performance_Bond__c.field-meta.xml
<CustomField>
    <fullName>Performance_Bond__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bid Checklist</description>
    <label>Performance Bond</label>
    <type>Checkbox</type>
</CustomField>