mabger-meter/force-app/main/default/objects/Opportunity/fields/Pilot__c.field-meta.xml
<CustomField>
    <fullName>Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This opportunity includes a pilot program.</inlineHelpText>
    <label>Pilot</label>
    <type>Checkbox</type>
</CustomField>