mabger-meter/force-app/main/default/objects/Opportunity/fields/Potential_Value_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value_of_Sale__c</fullName>
    <label>Potential Value of Sale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>