mabger-meter/force-app/main/default/objects/Opportunity/fields/Primary_Product_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_of_Interest__c</fullName>
    <description>Entered by customer via web, comes into SF via Pardot to Lead or Contact. Lead is mapped to Opp. PB transfers the value from the contact to the opportunity. Used for Lead Routing by LeadMethod.</description>
    <inlineHelpText>Entered by customer on web. Used for Lead Routing.</inlineHelpText>
    <label>Primary Product of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Products_Brands_of_Interest</valueSetName>
    </valueSet>
</CustomField>